<resources>
    <string name="app_name">Logo</string>

    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="headline_image">Headline Image</string>


    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="process_failed">Process failed</string>
    <string name="filter">Filter</string>
    <string name="date">Date</string>
    <string name="clear">Clear</string>
    <string name="search_in">Search in</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="apply">Apply</string>
    <string name="from">From</string>
    <string name="to">To</string>

    <string name="all">All</string>
    <string name="none">None</string>
    <string name="apply_filter">Apply filter</string>
    <string name="sort_by">Sort by</string>
    <string name="uploaded_date">Uploaded date</string>
    <string name="relevance">Relevance</string>

    <string name="search_history">Search History</string>
</resources>