<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/topHeadlineFragment"
        android:icon="@drawable/ic_outline_storage_24"
        android:title="@string/news" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_outline_person_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/moreFragment"
        android:icon="@drawable/ic_baseline_more_horiz_24"
        android:title="@string/more" />

</menu>