<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_16">

        <TextView
            android:id="@+id/text_view_sort_by"
            style="@style/PrimaryTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/colorSacoBorder"
            app:layout_constraintTop_toBottomOf="@id/text_view_sort_by" />

        <TextView
            android:id="@+id/text_view_upload_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/uploaded_date"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toTopOf="@id/view_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/radio_group" />

        <View
            android:id="@+id/view_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/colorSacoBorder"
            app:layout_constraintTop_toBottomOf="@id/text_view_upload_date" />

        <TextView
            android:id="@+id/text_view_relevance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relevance"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintBottom_toBottomOf="@id/radio_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_2" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_1">

            <RadioButton
                android:id="@+id/radio_button_upload_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5" />

            <RadioButton
                android:id="@+id/radio_button_relevance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
